Ensure content of pre blocks are wrapped in mailer emails

--- a/app/assets/stylesheets/mailer.css
+++ b/app/assets/stylesheets/mailer.css
@@ -179,6 +179,9 @@ a {
   font-size: 85%;
   padding: 1rem;
   margin: 1.5rem 0;
+  overflow-x: auto;
+  word-break: break-all;
+  white-space: pre-wrap;
 }
 
 .digest .post-content {
